<resources>
    <string name="app_name">Color type</string>
    <string name="ISTP_text">Pursue something that you are good at. Work that makes you feel free and interested in it. Use your unique skills to progress to do something that challenges you and makes you progress. Something that does not make you bored and emotional and at the same time does not disturb your peace</string>
    <string name="ISTP_text_sub">*Tip for ISTP type*</string>
    <string name="choose_MBTI_type">choose your mbti type</string>
    <string name="jobs_ISTP">~Jobs suggested for this type~</string>
    <string name="engineer">•Engineer</string>
    <string name="biologist">•Biologist</string>
    <string name="the_mechanic">•The mechanic</string>
    <string name="electrical_engineer">•Ilectrical engineer</string>
    <string name="investor">•Investor</string>
    <string name="technician">•Technician</string>
    <string name="people_who_are_istp">○People who are ISTP○</string>
    <string name="tip_istj">*Tip for ISTJ type*</string>
    <string name="istj_text"> Go for what you are good at. To make you feel safe and useful. Look for something like this and be a professional. When you are self-sufficient and in control of your work, you can do anything.Try to live in the moment. Sometimes Rosa has a hard time, but you can</string>
    <string name="jobs_istj">~Jobs suggested for this type~</string>
    <string name="computer_engineer">•Computer engineer</string>
    <string name="university_professor">•University professor</string>
    <string name="accountants">•Accountants</string>
    <string name="bank_employee">•Bank employee</string>
    <string name="lawyer">•Lawyer</string>
    <string name="nurse">•Nurse</string>
    <string name="doctor">•Doctor</string>
    <string name="people_who_are_istj">○People who are ISTJ○</string>
    <string name="tip_for_isfp_type">*Tip for ISFP type*</string>
    <string name="isfp_text">Pursue something that you are good at. You can use your creativity and give yourself freedom. Do something and it was a lot of activities and at the same time do not stress. Look for something that makes you independent and does not need anyone</string>
    <string name="isfp_jobs">~Jobs suggested for this type~</string>
    <string name="digital_designer">•Digital Designer</string>
    <string name="botanist">•Botanist</string>
    <string name="designer">•designer</string>
    <string name="artist">•Artist</string>
    <string name="singer">•Singer</string>
    <string name="painter">•Painter</string>
    <string name="people_who_are_isfp">○People who are ISFP○</string>
    <string name="web_designer">•Web designer</string>
    <string name="tip_isfj">*Tip for ISFJ type*</string>
    <string name="isfj_text">Look for something to be skilled at. Something that makes you feel safe and useful. A routine that helps people. Going to work makes you self-satisfied. Do not look for stressful work at all.Never give up and do not strive for your dreams and never give up</string>
    <string name="isfj_jobs">~Jobs suggested for this type~</string>
    <string name="primary_school_teacher">•Primary school teacher</string>
    <string name="kindergarten_trainer">•kindergarten trainer</string>
    <string name="psychologist">•Psychologist</string>
    <string name="chef">•Chef</string>
    <string name="people_who_are_isfj">○People who are ISFJ○</string>
    <string name="tip_intp">*Tip for INTP type*</string>
    <string name="intp_text">Pursue something that you are good at. Something you can use to express yourself and satisfy your curiosity. Something that needs new ideas and keeps you open-minded. Looking for a job should challenge you and at the same time make you want to continue and teach it. Do the work to feel useful on the surface</string>
    <string name="intp_jobs">~Jobs suggested for this type~</string>
    <string name="science_researcher">•Science researcher</string>
    <string name="astronaut">•Astronaut</string>
    <string name="predictor">•Predictor</string>
    <string name="people_who_are_intp">○People who are INTP○</string>
    <string name="tip_intj">Tip for INTJ type</string>
    <string name="intj_text">Look for work to be skilled. Which allows you to be independent. Do something that makes you feel like you are making a difference. And something that satisfies you and you can use them to the best of your ability and potential. Never underestimate and always strive for your dreams</string>
    <string name="graphic_designer">•Graphic Designer</string>
    <string name="ceo_of_the_company">•CEO of the company</string>
    <string name="geologist">•geologist</string>
    <string name="chemist">•Chemist</string>
    <string name="marketing">•Marketing</string>
    <string name="surgeon">•Surgeon</string>
    <string name="people_who_are_intj">○People who are INTJ○</string>
    <string name="tip_infp">*Tip for INFP type*</string>
    <string name="infp_text">Pursue something that you are good at. Something that calms you down and keeps you happy. Look for something that is neither too stressful nor too comfortable. Use your creativity and passion to make a difference. Find a job that has many opportunities and does not hinder your progress</string>
    <string name="infp_jobs">~Jobs suggested for this type~</string>
    <string name="environmental_protector">•Environmental protector</string>
    <string name="the_writer">•the writer</string>
    <string name="director">•Director</string>
    <string name="people_who_are_infp">○People who are INFP○</string>
    <string name="tip_infj">*Tip for INFJ type*</string>
    <string name="infj_text">Look for something that you are good at. Something that makes you interact with people and give you a sense of independence. Do something that will make a difference and you can use your sixth sense and your ideas to help others. Do something that keeps you busy, but not so overwhelmed that you do not have time for yourself.</string>
    <string name="infj_jobs">~Jobs suggested for this type~</string>
    <string name="criminal_case_lawyer">•Criminal case lawyer</string>
    <string name="real_estate_advisor">•Real Estate Advisor</string>
    <string name="librarian">•Librarian</string>
    <string name="psychiatrist">•Psychiatrist</string>
    <string name="red_cross">•Red Cross</string>
    <string name="researcher">•Researcher</string>
    <string name="people_who_are_infj">○People who are INFJ○</string>
    <string name="tip_estp">*Tip for ESTP type*</string>
    <string name="estp_text">Pursue something that you are good at. Do something that makes you feel free. Do something that is interesting to you and excites you. You are good at detecting disturbances in your surroundings. You can decide quickly and use the cartoon to do good handicrafts! You are attractive too. Do something that challenges you and has a high speed</string>
    <string name="electrician">•electrician</string>
    <string name="cop">•Cop</string>
    <string name="athlete">•Athlete</string>
    <string name="politician">•politician</string>
    <string name="blogger">•Blogger</string>
    <string name="people_who_are_estp">○People who are ESTP○</string>
    <string name="tip_esfj">*Tip for ESFJ type*</string>
    <string name="esfj_text">Look for a job in which you are skilled and what makes you feel you are talented and others need you. Look for a job that connects with a large number of people where you feel accepted and happy. You are creative. Look for something that gives you a sense of security and speed</string>
    <string name="esfj_jobs">~Jobs suggested for this type~</string>
    <string name="fashion_designer">•Fashion Designer</string>
    <string name="the_restaurant_owner">•the restaurant owner</string>
    <string name="dancer">•dancer</string>
    <string name="vet">•Vet</string>
    <string name="youtuber">•YouTuber</string>
    <string name="teacher">•Teacher</string>
    <string name="people_who_are_esfj">○People who are ESFJ○</string>
    <string name="entp_text">Be skilled in looking for work. Do something that will use your curiosity and communication skills Do something that you can use with your new ideas and that will make you open and free to pursue something that is fast and exciting Do something that challenges you ‌ Be provocative</string>
    <string name="tip_entp">*Tip for ENTP type*</string>
    <string name="entp_jobs">~Jobs suggested for this type~</string>
    <string name="forensic_doctor">•Forensic doctor</string>
    <string name="actor_actress">•Actor,Actress</string>
    <string name="producer">•producer</string>
    <string name="scientist">•Scientist</string>
    <string name="inventor">•Inventor</string>
    <string name="colonel">•Colonel</string>
    <string name="rapper">•Rapper</string>
    <string name="people_who_are_entp">○People who are ENTP○</string>
    <string name="tip_esfp">*Tip for ESFP type*</string>
    <string name="esfp_text">Look for something that you can master. Something that makes you able to express yourself and at the same time be interesting. Do something that challenges your skills and keeps you organized. An active job that has a lot of variety.</string>
    <string name="esfp_jobs">~Jobs suggested for this type~</string>
    <string name="software_engineer">•Software Engineer</string>
    <string name="digital_artist">•Digital artist</string>
    <string name="plastic_surgeon">•plastic surgeon</string>
    <string name="executor">•Executor</string>
    <string name="people_who_are_esfp">○People who are ESFP○</string>
    <string name="tip_entj">*Tip for ENTJ type*</string>
    <string name="entj_text">Pursue something that you are good at. Do something that is in your hand control and by which you can show your potential. Do something that is active and fast. When you are under pressure, do your job well. Use it to keep you satisfied and make you feel a change. You create</string>
    <string name="entj_jobs">~Jobs suggested for this type~</string>
    <string name="prosecutor">•Prosecutor</string>
    <string name="political_activist">•political activist</string>
    <string name="diplomatic">•Diplomatic</string>
    <string name="judge">•judge</string>
    <string name="people_who_are_entj">○People who are ENTJ○</string>
    <string name="tip_estj">*Tip for ESTJ type*</string>
    <string name="estj_text">Look for a job in which you are skilled. A job that gives you a sense of security and makes you feel in control of your hand is a routine job that gives you the opportunity to protect people. Use an active but calm atmosphere, it is good for you</string>
    <string name="estj_jobs">~Jobs suggested for this type~</string>
    <string name="business_lawyer">•Business Lawyer</string>
    <string name="pilot">•pilot</string>
    <string name="officer">•Officer</string>
    <string name="translator">•Translator</string>
    <string name="people_who_are_estj">○People who are ESTJ○</string>
    <string name="tip_enfj">*Tip for ENFJ type*</string>
    <string name="enfj_text">Look for a job that has the skills to do something that will help you connect with people and interact while controlling your hands. Leadership and management skills. Use it to find a job that keeps you open-minded and makes a difference. Create in the lives of others</string>
    <string name="restaurant_owner">•Restaurant owner</string>
    <string name="enfp_tip">*Tip for ENFP type*</string>
    <string name="enfp_text">Look for work that you can do skillfully. Do something that makes you feel free and happy. Do something that is fast and exciting. Do something that can make you travel to different places. Use your curiosity and creativity to do the work and help.</string>
    <string name="language_teacher">•Language teacher</string>
    <string name="manager">•manager</string>
    <string name="people_who_are_enfp">○People who are ENFP○</string>
</resources>