<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_enfp"
    tools:context=".EnfpActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tip_enfp"
        android:text="@string/enfp_tip"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enfp_text"
        android:text="@string/enfp_text"
        android:fontFamily="@font/simple"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_enfp"/>




    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enfp_jobs"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:fontFamily="@font/bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/estj_jobs"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toBottomOf="@+id/tip_enfp"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/language_teacher"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@+id/enfp_jobs" />



    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/actor_actress"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@+id/enfp_jobs" />



    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/psychologist"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@+id/enfp_jobs" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/manager"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@+id/enfp_jobs" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/chef"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@+id/enfp_jobs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/artist"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@+id/enfp_jobs" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/singer"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@+id/enfp_jobs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/people_who_are_enfp"
        android:text="@string/people_who_are_enfp"
        android:textSize="26sp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/bold_simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enfp_jobs" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="290dp"
        app:srcCompat="@mipmap/tom_enfp"
        app:layout_constraintTop_toTopOf="@+id/people_who_are_enfp"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginStart="100dp"
        app:srcCompat="@mipmap/brownhair_enfp"
        app:layout_constraintTop_toTopOf="@+id/people_who_are_enfp"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="130dp"
        app:srcCompat="@mipmap/anna_enfp"
        app:layout_constraintTop_toTopOf="@+id/people_who_are_enfp"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="290dp"
        app:srcCompat="@mipmap/semi_enfp"
        app:layout_constraintTop_toTopOf="@+id/people_who_are_enfp"/>



</androidx.constraintlayout.widget.ConstraintLayout>